<resources>
    <string name="app_name">RideSOS</string>
    <string name="title_home">Home</string>
    <string name="title_hospital">Hospital</string>
    <string name="title_profile">Profile</string>
    <string name="rideOnText">We’ll use phone’s sensors to ensure your safety.</string>
    <string name="rideOnTitle">Have a safe ride!</string>
    <string name="rideOffText">Switch on to start monitoring your ride.</string>
    <string name="rideOffTitle">Record new ride</string>
    <string name="gender_label">Gender</string>
    <string name="gender_value">Male</string>
    <string-array name="gender_values">
        <item>@string/gender_value</item>
        <item>Female</item>
        <item>Not specified</item>
    </string-array>
    <string name="blood_type_label">Blood Type</string>
    <string name="blood_type_value">A+</string>
    <string-array name="blood_type_values">
        <item>O+</item>
        <item>O-</item>
        <item>@string/blood_type_value</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>Unknown</item>
    </string-array>
    <string name="birthdate_label">Birthdate</string>
    <string name="birthdate_value">23 October 1964</string>
    <string name="safety_questions_btn">Safety Questions</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="phone_number_value">+34 123–45678</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="edit_description">Edit Profile</string>
    <string name="back_description">Go Back</string>
    <string name="name_label">Name</string>
    <string name="name_value">Miguel</string>
    <string name="surname_label">Surname</string>
    <string name="surname_value">Cervantes</string>
    <string name="confirm_edit_btn">Save Changes</string>
    <string name="preference_file_key">PREFERENCE_FILE_KEY</string>
    <string name="q1_question">What is your favorite food?</string>
    <string name="q2_question">What was the name of your first pet?</string>
    <string name="q3_question">What is the name of your mother?</string>
    <string name="q1_answer">Pizza</string>
    <string name="q2_answer">Giango</string>
    <string name="q3_answer">Daria</string>
    <string-array name="q1_answers">
        <item>@string/q1_answer</item>
        <item>Pasta</item>
    </string-array>
    <string-array name="q2_answers">
        <item>@string/q2_answer</item>
        <item>Fido</item>
    </string-array>
    <string-array name="q3_answers">
        <item>@string/q3_answer</item>
        <item>Lina</item>
    </string-array>
    <string-array name="questions">
        <item>@string/q1_question</item>
        <item>@string/q2_question</item>
        <item>@string/q3_question</item>
    </string-array>

    <string name="channel_name">Accelerometer Service Channel</string>
    <string name="channel_description">Accelerometer monitoring for crash detection</string>
    <string name="logo_description">App Logo</string>
    <string name="action_continue">Continue</string>
    <string name="action_register">Done!</string>
    <string name="welcome">"Let's meet!"</string>
    <string name="set_questions_title">Set your questions</string>
    <string name="set_questions_description">You will be asked them in case of accidents.</string>
    <string name="q_hint1">Question</string>
    <string name="q_hint2">Answer</string>
    <string-array name="question_keys">
        <item>Q1</item>
        <item>Q2</item>
        <item>Q3</item>
    </string-array>
    <string-array name="answer_keys">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
    </string-array>
    <string name="okay_button_text">I\'M FINE</string>
    <string name="not_okay_button_text">I\'M NOT OKAY</string>
    <string name="alert_text">Your phone is currently blinking and sounding. Please confirm your conditions in 5 seconds, or we will call an ambulance for you.</string>
    <string name="hospitals_status_key">hospitalsDownloaded</string>
    <string name="first_start_key">firstStart</string>
    <string-array name="woman_names">
        <item>Anna</item>
        <item>Julia</item>
        <item>Daniela</item>
        <item>Elena</item>
        <item>Paloma</item>
        <item>Paula</item>
        <item>Miranda</item>
        <item>Serena</item>
        <item>Marta</item>
        <item>Sabrina</item>
    </string-array>

    <string-array name="food_type">
        <item>Pizza</item>
        <item>Pasta</item>
        <item>Ice Cream</item>
        <item>Tortilla</item>
        <item>Empanadas</item>
        <item>Hamburger</item>
        <item>Fish</item>
        <item>Sushi</item>
        <item>Cheese</item>
        <item>Churros</item>
    </string-array>

    <string-array name="animal_name">
        <item>Fido</item>
        <item>Luna</item>
        <item>Rocky</item>
        <item>Milo</item>
        <item>Penny</item>
        <item>Ziggy</item>
        <item>Nola</item>
        <item>Sandy</item>
        <item>Oreo</item>
        <item>Snoopy</item>
    </string-array>

    <string name="completed_warning">We suggest you anyway to check the nearest hospital in the application.</string>

</resources>