<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupActivity"
    >

    <!-- Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@drawable/divider_normal"
        android:showDividers="middle"
        android:gravity="center_horizontal"
        android:padding="@dimen/my_big_margin">

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/logo_description" />

        <!-- Welcome Text -->
        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/my_medium_margin"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/bold_text_size"
            android:textStyle="bold"
            android:visibility="visible" />

        <!-- Name -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_label"
            app:boxBackgroundColor="@color/card_bg_editable"
            app:boxCornerRadiusBottomStart="@dimen/default_radius"
            app:boxCornerRadiusBottomEnd="@dimen/default_radius"
            app:boxCornerRadiusTopStart="@dimen/default_radius"
            app:boxCornerRadiusTopEnd="@dimen/default_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:enabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Surname -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname_label"
            app:boxBackgroundColor="@color/card_bg_editable"
            app:boxCornerRadiusBottomStart="@dimen/default_radius"
            app:boxCornerRadiusBottomEnd="@dimen/default_radius"
            app:boxCornerRadiusTopStart="@dimen/default_radius"
            app:boxCornerRadiusTopEnd="@dimen/default_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:enabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- PhoneNumber -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_label"
            app:boxBackgroundColor="@color/card_bg_editable"
            app:boxCornerRadiusBottomStart="@dimen/default_radius"
            app:boxCornerRadiusBottomEnd="@dimen/default_radius"
            app:boxCornerRadiusTopStart="@dimen/default_radius"
            app:boxCornerRadiusTopEnd="@dimen/default_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:enabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Gender and Blood Type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:gravity="center"
            android:showDividers="middle"
            android:divider="@drawable/divider_small_horizontal"
            android:weightSum="2">

            <!-- Gender -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/gender_label"
                app:boxBackgroundColor="@color/card_bg_editable"
                app:boxCornerRadiusBottomStart="@dimen/default_radius"
                app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                app:boxCornerRadiusTopStart="@dimen/default_radius"
                app:boxCornerRadiusTopEnd="@dimen/default_radius"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:enabled="true"
                >

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Blood type -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/blood_type_label"
                app:boxBackgroundColor="@color/card_bg_editable"
                app:boxCornerRadiusBottomStart="@dimen/default_radius"
                app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                app:boxCornerRadiusTopStart="@dimen/default_radius"
                app:boxCornerRadiusTopEnd="@dimen/default_radius"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:enabled="true"
                >

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/bloodType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!-- Birthdate -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthdate_label"
            app:boxBackgroundColor="@color/card_bg_editable"
            app:boxCornerRadiusBottomStart="@dimen/default_radius"
            app:boxCornerRadiusBottomEnd="@dimen/default_radius"
            app:boxCornerRadiusTopStart="@dimen/default_radius"
            app:boxCornerRadiusTopEnd="@dimen/default_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:enabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:elevation="@dimen/default_elevation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/my_biggest_margin"
            android:paddingVertical="@dimen/my_medium_margin"
            android:background="@drawable/rounded_button_continue"
            android:text="@string/action_continue"
            android:textColor="@color/text_button"
            android:textSize="@dimen/small_text_size"
            android:textAllCaps="false"
            android:textStyle="normal" />

    </LinearLayout>

</ScrollView>
