<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    >

    <!-- Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:background="@color/bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/my_biggest_margin">

        <!-- Bold Text Off -->
        <TextView
            android:id="@+id/textViewTitleOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/my_medium_margin"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/rideOffTitle"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/bold_text_size"
            android:textStyle="bold"
            android:visibility="visible" />

        <!-- Main Text Off -->
        <TextView
            android:id="@+id/textViewMessageOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/my_big_margin"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/rideOffText"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/normal_text_size"
            android:visibility="visible" />

        <!-- Switch for toggling -->
        <Switch
            android:id="@+id/switchRide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumb="@drawable/custom_thumb"
            android:track="@drawable/custom_track"
            android:switchMinWidth="@dimen/switch_length"
            android:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <!-- Main Text Active -->
        <TextView
            android:id="@+id/textViewMessageActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_big_margin"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/rideOnText"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/normal_text_size"
            android:visibility="invisible" />

        <!-- Bold Text Active -->
        <TextView
            android:id="@+id/textViewTitleActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_medium_margin"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/rideOnTitle"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/bold_text_size"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <!-- Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/container_bg"
        android:paddingVertical="@dimen/my_medium_margin"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled"
        app:itemRippleColor="@android:color/transparent"
        />
</RelativeLayout>
