<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SetQuestionsActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_normal"
        android:showDividers="middle"
        android:gravity="center_horizontal"
        android:padding="@dimen/my_big_margin" >

        <!-- Back Icon -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Back Icon -->
            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/back_description"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Bold Text -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/set_questions_title"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/bold_text_size"
            android:textStyle="bold"
            android:visibility="visible" />

        <!-- Main Text -->
        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/set_questions_description"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/normal_text_size"
            android:visibility="visible" />

        <!-- Questions -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider_normal"
            android:showDividers="middle"
            android:gravity="center_horizontal"
            android:layout_marginVertical="@dimen/my_small_margin" >

            <!-- Q1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="@drawable/divider_small"
                android:showDividers="middle"
                android:background="@drawable/rounded_corners_questions"
                android:padding="@dimen/my_smallest_margin"
                >

                <!-- Q1 -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/q_hint1"
                    app:boxBackgroundColor="@color/card_bg_editable"
                    app:boxCornerRadiusBottomStart="@dimen/default_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                    app:boxCornerRadiusTopStart="@dimen/default_radius"
                    app:boxCornerRadiusTopEnd="@dimen/default_radius"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:enabled="true"
                    >

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/q1_question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/q1_question" />
                </com.google.android.material.textfield.TextInputLayout>
                <!-- A1 -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/q_hint2"
                    app:boxBackgroundColor="@color/card_bg_editable"
                    app:boxCornerRadiusBottomStart="@dimen/default_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                    app:boxCornerRadiusTopStart="@dimen/default_radius"
                    app:boxCornerRadiusTopEnd="@dimen/default_radius"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:enabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/q1_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Q2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="@drawable/divider_small"
                android:showDividers="middle"
                android:background="@drawable/rounded_corners_questions"
                android:padding="@dimen/my_smallest_margin"
                >

                <!-- Q2 -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/q_hint1"
                    app:boxBackgroundColor="@color/card_bg_editable"
                    app:boxCornerRadiusBottomStart="@dimen/default_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                    app:boxCornerRadiusTopStart="@dimen/default_radius"
                    app:boxCornerRadiusTopEnd="@dimen/default_radius"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:enabled="true"
                    >

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/q2_question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/q2_question" />
                </com.google.android.material.textfield.TextInputLayout>
                <!-- A2 -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/q_hint2"
                    app:boxBackgroundColor="@color/card_bg_editable"
                    app:boxCornerRadiusBottomStart="@dimen/default_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                    app:boxCornerRadiusTopStart="@dimen/default_radius"
                    app:boxCornerRadiusTopEnd="@dimen/default_radius"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:enabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/q2_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Q3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="@drawable/divider_small"
                android:showDividers="middle"
                android:background="@drawable/rounded_corners_questions"
                android:padding="@dimen/my_smallest_margin"
                >

                <!-- Q3 -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/q_hint1"
                    app:boxBackgroundColor="@color/card_bg_editable"
                    app:boxCornerRadiusBottomStart="@dimen/default_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                    app:boxCornerRadiusTopStart="@dimen/default_radius"
                    app:boxCornerRadiusTopEnd="@dimen/default_radius"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:enabled="true"
                    >

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/q3_question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/q3_question" />
                </com.google.android.material.textfield.TextInputLayout>
                <!-- A3 -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/q_hint2"
                    app:boxBackgroundColor="@color/card_bg_editable"
                    app:boxCornerRadiusBottomStart="@dimen/default_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                    app:boxCornerRadiusTopStart="@dimen/default_radius"
                    app:boxCornerRadiusTopEnd="@dimen/default_radius"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:enabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/q3_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <!-- Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:elevation="@dimen/default_elevation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/my_biggest_margin"
            android:paddingVertical="@dimen/my_medium_margin"
            android:background="@drawable/rounded_button_continue"
            android:text="@string/action_register"
            android:textColor="@color/text_button"
            android:textSize="@dimen/small_text_size"
            android:textAllCaps="false"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>